# mlops-productivity-xgboost

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.celery  Dockerfile.streamlit  README.md  config.py  docker-compose.yaml  evaluate.py  feature-engineering.py  feature_engineering.py  groq-test.py  installed.txt  locustfile.py  main.py  mlflow.db  pipeline.py  pyproject.toml  requirements-api.txt  requirements-celery.txt  requirements-streamlit.txt  requirements.txt  shap_analysis.py  signal_test.py  test.py  train.py
.github/workflows/: deploy.yml
D/ML_project/ML/: mlflow.db
ML/: evaluate.py  feature_engineering.py  main.py  mlflow.db  pipeline.py  test.py  train.py
api/: api_config.py  cache.py  celery_app.py  docker-compose.yaml  feature_engineering.py  llm_client.py  main.py  metrics.py  model_loader.py  schemas.py  tasks.py
app/: streamlit_app.py
dataset/: screen_sleep_stress_highsignal.csv
grafana/dashboards/: ml_app.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: prometheus.yml
nginx/: nginx.conf
prometheus/: prometheus.yml
utils/: config.py  shap_analysis.py  signal_test.py
