[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "fastapi==0.115.0",
    "flower>=2.0.1",
    "httpx==0.27.2",
    "joblib>=1.5.3",
    "locust>=2.43.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "plotly==5.24.1",
    "pydantic==2.8.2",
    "redis>=7.2.1",
    "scikit-learn==1.5.2",
    "seaborn>=0.13.2",
    "shap==0.46.0",
    "streamlit==1.38.0",
    "uvicorn[standard]==0.30.6",
    "xgboost==2.1.1",
]
